<resources>

    <string name="app_name">IrregularVerbs</string>
    <string name="menu_settings">Settings</string>
    
    <string name="progress_title">Loading</string>
    <string name="progress_text">Loading, please wait…</string>
    
    <string name="title_activity_main">Irregular Verbs</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_table">Table</string>
    <string name="title_activity_learn">Learn</string>
    <string name="title_activity_train">Train</string>
    <string name="title_activity_scores">Scores</string>
    
    <string name="description_info">Info</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_previous">Previous</string>
    <string name="description_next">Next</string>
    <string name="description_speak">Speak</string>

    <string name="title_home">Home</string>
    
    <string name="table_form_1">Infinitive</string>
    <string name="table_form_2">Past Simple</string>
    <string name="table_form_3">Past Participle</string>
    <string name="table_translation">Translation</string>
    <string name="table_click_hint">Click on cell to speak word</string>
    <string name="table_show_transcription"><u>Show transcription</u></string>
    <string name="table_hide_transcription"><u>Hide transcription</u></string>
    
    <string name="learn_hint">Use arrows or touch to scroll</string>
    
    <string name="search_hint">Type to search</string>
    <string name="search_not_found">Verbs not found</string>
    
    <string name="info_usage">
        <![CDATA[
        		<p><b>The reference book of english irregular verbs</b></p>
        		<p>version 1.7</p>
            	Features:<ul>
        		<li>Table: full list of verbs</li>
        		<li>Learn: scrollable page of verbs with transcriptions</li>
        		<li>Search: text and voice search verbs</li>
        		<li>Train: 2 train modes: quiz plus type</li>
        		<li>Scores: statistic of training with filtering and sorting</li>
        		<li>Settings: speech rate, languages of translate</li></ul>
        	]]>
    </string>
    <string name="info_more_apps">Get more applications</string>
    <string name="rate_app"><u>Very appreciate for your comments and rates</u></string>
    <string name="rate_app_short">Rate application</string>
    <string name="info_hide_ads">Hide ads</string>

    <string name="train_title_quiz">Quiz mode</string>
    <string name="train_title_text">Text mode</string>
    <string name="train_question_part_first">Select the</string>
    <string name="train_question_part_second">of verb</string>
    <string name="tran_hint">Select right answer</string>
    <string name="train_min_dialog_title">At least %s verbs must be in training</string>
    <string name="train_min_dialog_button">Go to statistic and add verbs in training</string>
    <string name="train_text_task">Type three forms of verb</string>
    <string name="train_text_form_1">1st form (infinitive)</string>
    <string name="train_text_form_2">2nd form (past simple)</string>
    <string name="train_text_form_3">3rd form (past participle)</string>
    <string name="train_text_answer">Check answer</string>
    <string name="train_text_next">Next</string>
    <string name="tran_select_verbs"><u>Select verbs to train</u></string>

    <string name="pref_speak">Speaker</string>
    <string name="pref_speak_speech_rate">Speech rate</string>
    <string name="pref_speak_pitch">Pitch</string>
    <string name="pref_lang">Language of translation</string>
    <string name="pref_lang_dialog">Select language of translation</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_it">Italian</string>
    <string name="lang_de">German</string>
    <string name="lang_fr">French</string>
    <string name="lang_es">Spanish</string>
    <string name="lang_pt">Portuguese</string>
    <string name="lang_ro">Romanian</string>
    <string name="lang_ua">Ukrainian</string>
    <string name="pref_lang_dialog_save">Save</string>
    <string name="pref_font">Font settings</string>
    <string name="pref_font_size">Font size</string>
    
    <string name="scores_verb">Verb</string>
    <string name="scores_correct_count">Correct</string>
    <string name="scores_correct_percent">% of correct</string>
    <string name="scores_reset"><u>Reset statistic</u></string>
    <string name="scores_in_training">In training</string>
    <string name="scores_select_all">Select all</string>
    <string name="scores_deselect_all">Deselect all</string>
    
    <string name="question_submit">Are you sure?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>

    <string name="ad_mob_id">beb68e582ba341c6</string>
</resources>