<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_table"
        android:title="@string/title_activity_table"
        android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_train"
        android:title="@string/title_activity_train"
        android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_scores"
        android:title="@string/title_activity_scores"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_search"
        android:title="@string/description_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_info"
        android:title="@string/description_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_rate"
        android:title="@string/rate_app_short"
        android:icon="@android:drawable/btn_star_big_off"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_more_apps"
        android:title="@string/info_more_apps"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_hide_ads"
        android:title="@string/info_hide_ads"
        android:showAsAction="ifRoom" />

</menu>
