<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/pref_speak"
        android:title="@string/pref_speak" >
        <org.forzaverita.iverbs.preference.SpeechRatePreference
            android:key="pref_speak_speech_rate"
            android:title="@string/pref_speak_speech_rate" />
        <org.forzaverita.iverbs.preference.PitchPreference
            android:key="pref_speak_pitch"
            android:title="@string/pref_speak_pitch" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/pref_lang"
        android:title="@string/pref_lang" >
        <org.forzaverita.iverbs.preference.SelectLangPreference
            android:key="pref_lang"
            android:title="@string/pref_lang" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_font" >
        <org.forzaverita.iverbs.preference.FontSizePreference
            android:key="pref_font_size"
            android:title="@string/pref_font_size" />
    </PreferenceCategory>

</PreferenceScreen>