<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/description_info" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_info"
            android:onClick="onClickInfo"
            android:src="@drawable/title_info" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background" 
        android:stretchColumns="*" >

        <TableRow style="@style/TableRow" >

            <TextView
                style="@style/TableHeaderText"
                android:text="@string/table_form_1" />

            <TextView
                style="@style/TableHeaderText"
                android:text="@string/table_form_2" />

            <TextView
                style="@style/TableHeaderText"
                android:text="@string/table_form_3" />

            <TextView android:id="@+id/table_header_translation"
                style="@style/TableHeaderText"
                android:text="@string/table_translation" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="0.9" >

        <TableLayout
            android:id="@+id/table_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>
    
    <TextView android:text="@string/table_click_hint"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        style="@style/HintText" />

</LinearLayout>