<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pref_lang_dialog"
        android:textColor="@color/select_lang_title"
        android:textSize="19sp" />

    <RadioGroup
        android:id="@+id/selectLangGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/selectLangRu"
            style="@style/LangButton"
            android:contentDescription="@string/lang_ru"
            android:drawableLeft="@drawable/ru"
            android:text="@string/lang_ru" />

        <RadioButton
            android:id="@+id/selectLangIt"
            style="@style/LangButton"
            android:contentDescription="@string/lang_it"
            android:drawableLeft="@drawable/it"
            android:text="@string/lang_it" />

        <RadioButton
            android:id="@+id/selectLangDe"
            style="@style/LangButton"
            android:contentDescription="@string/lang_de"
            android:drawableLeft="@drawable/de"
            android:text="@string/lang_de" />

        <RadioButton
            android:id="@+id/selectLangFr"
            style="@style/LangButton"
            android:contentDescription="@string/lang_fr"
            android:drawableLeft="@drawable/fr"
            android:text="@string/lang_fr" />
        
        <RadioButton
            android:id="@+id/selectLangEs"
            style="@style/LangButton"
            android:contentDescription="@string/lang_es"
            android:drawableLeft="@drawable/es"
            android:text="@string/lang_es" />
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_lang_dialog_save"
        android:onClick="selectLang" />

</LinearLayout>