<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background" 
        android:stretchColumns="*" >

        <TableRow style="@style/TableRow" >

            <TextView
                style="@style/TableHeaderText"
                android:text="@string/scores_verb" />

            <TextView
                style="@style/TableHeaderText"
                android:text="@string/scores_correct_count" />

            <TextView
                style="@style/TableHeaderText"
                android:text="@string/scores_correct_percent" />
            
            <TextView
                style="@style/TableHeaderText"
                android:text="@string/scores_in_training" />

        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="0.9" >

        <TableLayout
            android:id="@+id/scores_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/scores_select_all"
            android:onClick="onSelectAll" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/scores_deselect_all"
            android:onClick="onDeselectAll" />
    </LinearLayout>

    <Button
        style="@style/HintText"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:onClick="onClickReset"
        android:text="@string/scores_reset"
        android:textSize="12sp" />

</LinearLayout>