<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/description_info" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_info"
            android:onClick="onClickInfo"
            android:src="@drawable/title_info" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/info_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                style="@style/InfoLink"
                android:onClick="onClickRateApp"
                android:text="@string/rate_app" />

            <Button
                style="@style/InfoLink"
                android:onClick="onClickMoreApps"
                android:text="@string/info_more_apps" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>