<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            style="@style/TitleBarLogo"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/app_name" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_info"
            android:onClick="onClickInfo"
            android:src="@drawable/title_info" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="4dip"
        android:background="@color/background" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dashboard_button_learn"
                style="@style/HomeButton"
                android:drawableTop="@drawable/button_learn"
                android:onClick="onClickMode"
                android:text="@string/title_activity_learn" />

            <Button
                android:id="@+id/dashboard_button_table"
                style="@style/HomeButton"
                android:drawableTop="@drawable/button_table"
                android:onClick="onClickMode"
                android:text="@string/title_activity_table" />
            
        </LinearLayout>
        
        <!-- //TODO future features 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dashboard_button_train"
                style="@style/HomeButton"
                android:drawableTop="@drawable/button_train"
                android:onClick="onClickMode"
                android:text="@string/title_activity_train" />
            
            <Button
                android:id="@+id/dashboard_button_scores"
                style="@style/HomeButton"
                android:drawableTop="@drawable/button_scores"
                android:onClick="onClickMode"
                android:text="@string/title_activity_scores" />            

        </LinearLayout>
 		-->
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dashboard_button_search"
                style="@style/HomeButton"
                android:drawableTop="@drawable/ic_btn_search"
                android:onClick="onClickMode"
                android:text="@string/title_activity_search" />

            <Button
                android:id="@+id/dashboard_button_info"
                style="@style/HomeButton"
                android:drawableTop="@drawable/ic_btn_info"
                android:onClick="onClickMode"
                android:text="@string/title_activity_info" />
            
        </LinearLayout>
 		
    </LinearLayout>

</LinearLayout>