<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/description_info" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_info"
            android:onClick="onClickInfo"
            android:src="@drawable/title_info" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/train_question_part_first" />
            
            <TextView
                android:id="@+id/train_question_form"
                android:padding="10dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/train_question_part_second" />
            
            <TextView
                android:id="@+id/train_question_verb"
                android:padding="10dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" >

                <TableRow>

                    <Button android:id="@+id/train_answer_1" />

                    <Button android:id="@+id/train_answer_2" />
                </TableRow>

                <TableRow>

                    <Button android:id="@+id/train_answer_3" />

                    <Button android:id="@+id/train_answer_4" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>