<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/train_text_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/train_text_task" />

            <TextView
                android:id="@+id/train_text_verb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/train_key_text"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1" >

                <TableRow>

                    <TextView
                        android:id="@+id/train_text_form1_title"
                        style="@style/TrainTextFormTitle"
                        android:text="@string/train_text_form_1"/>

                    <EditText
                        android:id="@+id/train_text_answer_1"
                        style="@style/TrainTextFormAnswer" />

                    <TextView
                        android:id="@+id/train_text_form1_original"
                        style="@style/TrainTextFormOriginal"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/train_text_form2_title"
                        style="@style/TrainTextFormTitle"
                        android:text="@string/train_text_form_2"/>

                    <EditText
                        android:id="@+id/train_text_answer_2"
                        style="@style/TrainTextFormAnswer" />

                    <TextView
                        android:id="@+id/train_text_form2_original"
                        style="@style/TrainTextFormOriginal"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/train_text_form3_title"
                        style="@style/TrainTextFormTitle"
                        android:text="@string/train_text_form_3"/>

                    <EditText
                        android:id="@+id/train_text_answer_3"
                        style="@style/TrainTextFormAnswer" />

                    <TextView
                        android:id="@+id/train_text_form3_original"
                        style="@style/TrainTextFormOriginal"/>
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/train_text_answer_check"
                    style="@style/ButtonTrainTextAnswer"
                    android:text="@string/train_text_answer" />

                <Button
                    android:id="@+id/train_text_next"
                    style="@style/ButtonTrainTextAnswer"
                    android:text="@string/train_text_next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/train_text_count_correct"
                    android:layout_height="wrap_content"
                    style="@style/CounterAnswer"
                    android:textColor="@color/train_correct" />

                <TextView
                    android:id="@+id/train_text_count_wrong"
                    android:layout_height="wrap_content"
                    style="@style/CounterAnswer"
                    android:textColor="@color/train_wrong" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        style="@style/HintText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tran_select_verbs"
        android:clickable="true"
        android:onClick="onCLickSelectVerbsToTrain"/>

</LinearLayout>