<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/description_info" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_info"
            android:onClick="onClickInfo"
            android:src="@drawable/title_info" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/background"
        android:orientation="horizontal" >

        <ImageButton
            style="@style/LearnArrow"
            android:contentDescription="@string/description_previous"
            android:onClick="onClickPrevious"
            android:src="@drawable/button_left_arrow" />

        <ScrollView
            android:id="@+id/learn_scroll_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout style="@style/LearnVerbBlock" >

                    <LinearLayout style="@style/LearnVerbTextBlock" >

                        <TextView
                            android:id="@+id/learn_form1"
                            style="@style/LearnVerbTextForm" />

                        <TextView
                            android:id="@+id/learn_form1_transcription"
                            style="@style/LearnVerbTextTranscription" />
                    </LinearLayout>

                    <ImageButton
                        style="@style/LearnSpeaker"
                        android:contentDescription="@string/description_speak"
                        android:onClick="speakForm1" />
                </LinearLayout>

                <View style="@style/LearnVerbSplitter" />

                <LinearLayout style="@style/LearnVerbBlock" >

                    <LinearLayout style="@style/LearnVerbTextBlock" >

                        <TextView
                            android:id="@+id/learn_form2"
                            style="@style/LearnVerbTextForm" />

                        <TextView
                            android:id="@+id/learn_form2_transcription"
                            style="@style/LearnVerbTextTranscription" />
                    </LinearLayout>

                    <ImageButton
                        style="@style/LearnSpeaker"
                        android:contentDescription="@string/description_speak"
                        android:onClick="speakForm2" />
                </LinearLayout>

                <View style="@style/LearnVerbSplitter" />

                <LinearLayout style="@style/LearnVerbBlock" >

                    <LinearLayout style="@style/LearnVerbTextBlock" >

                        <TextView
                            android:id="@+id/learn_form3"
                            style="@style/LearnVerbTextForm" />

                        <TextView
                            android:id="@+id/learn_form3_transcription"
                            style="@style/LearnVerbTextTranscription" />
                    </LinearLayout>

                    <ImageButton
                        style="@style/LearnSpeaker"
                        android:contentDescription="@string/description_speak"
                        android:onClick="speakForm3" />
                </LinearLayout>

                <View style="@style/LearnVerbSplitter" />

                <LinearLayout style="@style/LearnVerbBlock" >

                    <TextView
                        android:id="@+id/learn_translation"
                        style="@style/LearnVerbTextForm" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ImageButton
            style="@style/LearnArrow"
            android:layout_gravity="right"
            android:contentDescription="@string/description_next"
            android:onClick="onClickNext"
            android:src="@drawable/button_right_arrow" />
    </LinearLayout>

    <TextView
        style="@style/HintText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_hint" />

</LinearLayout>