<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_info"
            android:onClick="onClickInfo"
            android:src="@drawable/title_info" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="@color/background" >
    
    	<ListView android:id="@id/search_list"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:layout_weight="0.9"
    		android:cacheColorHint="#00000000" />
    
    	<TextView android:id="@+id/verb_not_found"
	    	android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:layout_weight="0.9"
    		android:layout_margin="10dp"
    		android:textSize="25sp"
    		android:textColor="#000000"
    		android:gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>